--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.5.5",
     "@expo/samples": "2.1.1",
+    "babel": "^6.23.0",
+    "babel-plugin-react-native-web": "^0.11.5",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-dom": "^16.8.6",
